--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 its work!
 <body>
-  <body style=»background-color: #55D52B»>
+  <body style=»background-color: #b26dde»>
   </body>
 </html>
