--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
+  <head>
 its work!
+  </head>
 <body>
   <body style=»background-color: #b26dde»>
+    <p>Фон сайта #b26dde</p>
   </body>
 </html>
