--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 its work!
   </head>
 <body>
-  <body style=»background-color: #b26dde»>
+        style=»background-color: #b26dde»
     <p>Фон сайта #b26dde</p>
   </body>
 </html>
