--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <head>
 its work!
   </head>
-<body>
-        style=»background-color: #b26dde»
+<body style=»background-color: #b26dde»
     <p>Фон сайта #b26dde</p>
   </body>
 </html>
